--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
   <meta name="keywords" content="ofertas, compras, descontos, eletrônicos, moda, Brasil">
   <title>Centro de Compras - Ofertas do Dia</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4531749081462125" crossorigin="anonymous"></script>
-  <link rel="preload" href="logos/logoscentrodecompras.jpeg" as="image">
+  <link rel="preload" href="logos/logoscentrodecompras.webp" as="image">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-  <!-- Adicionado CDN do Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
   <link rel="icon" type="image/png" sizes="32x32" href="logos/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="logos/favicon-16x16.png">
@@ -23,9 +21,13 @@
 </head>
 <body>
   <header class="site-header">
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
     <div class="logo-container">
       <a href="index.html">
-        <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
+        <picture>
+          <source srcset="logos/logoscentrodecompras.webp" type="image/webp">
+          <img src="logos/logoscentrodecompras.jpeg" alt="Centro de Compras" id="site-logo-img" width="150" height="50">
+        </picture>
       </a>
     </div>
     <div class="header-text">
@@ -34,7 +36,7 @@
     </div>
   </header>
 
-  <nav>
+  <nav id="main-nav" class="hidden">
     <a href="">Promoções</a>
     <a href="cupom">Cupom de Desconto</a>
     <a href="sobre">Sobre</a>
@@ -42,10 +44,13 @@
   </nav>
 
   <div class="container">
-    <aside class="sidebar">
+    <aside id="sidebar" class="sidebar hidden">
       <h3>Categorias</h3>
       <ul>
-        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')" aria-label="Filtrar por todas as categorias"><i class="fas fa-list mr-2"></i>Todas</li>
+        <li class="categoria-item ativa" data-categoria="todas" onclick="filtrarPorCategoria('todas')" aria-label="Filtrar por todas as categorias">
+          <svg class="mr-2" width="16" height="16" viewBox="0 0 512 512"><path fill="currentColor" d="M0 96C0 78.3 14.3 64 32 64H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM0 416c0-17.7 14.3-32 32-32H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32z"/></svg>
+          Todas
+        </li>
         <li class="categoria-item" data-categoria="eletronicos" onclick="filtrarPorCategoria('eletronicos')" aria-label="Filtrar por eletrônicos"><i class="fas fa-laptop mr-2"></i>Eletrônicos</li>
         <li class="categoria-item" data-categoria="moda" onclick="filtrarPorCategoria('moda')" aria-label="Filtrar por moda"><i class="fas fa-tshirt mr-2"></i>Moda</li>
         <li class="categoria-item" data-categoria="fitness" onclick="filtrarPorCategoria('fitness')" aria-label="Filtrar por fitness"><i class="fas fa-dumbbell mr-2"></i>Fitness</li>
@@ -68,9 +73,11 @@
       <section>
         <h2>🛍️ Ofertas do Dia</h2>
         <ins class="adsbygoogle"
-             style="display:inline-block;width:728px;height:90px"
+             style="display:block"
              data-ad-client="ca-pub-4531749081462125"
-             data-ad-slot="5690664546"></ins>
+             data-ad-slot="5690664546"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
         <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
@@ -93,12 +100,15 @@
             <div class="loja" data-loja="mercadolivre" onclick="filtrarPorLoja('mercadolivre')" aria-label="Filtrar por Mercado Livre">
               <img src="logos/mercadolivre.jpg" alt="Mercado Livre" loading="lazy" width="100" height="40"><span>Mercado Livre</span>
             </div>
-            <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')" aria-label="Filtrar por Alibaba"> <!-- Corrigido data-lojaconforte-loja -->
+            <div class="loja" data-loja="alibaba" onclick="filtrarPorLoja('alibaba')" aria-label="Filtrar por Alibaba">
               <img src="logos/alibaba.png" alt="Alibaba" loading="lazy" width="100" height="40"><span>Alibaba</span>
             </div>
           </div>
         </div>
-        <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Pesquisar produtos">
+        <div class="search-container">
+          <input type="text" id="busca" placeholder="Busque por produtos..." class="barra-busca" aria-label="Pesquisar produtos">
+          <svg class="search-icon" width="16" height="16" viewBox="0 0 512 512"><path fill="currentColor" d="M508.5 481.6l-129-129c-2.3-2.3-5.3-3.5-8.5-3.5h-10.3C395 312.1 416 262.5 416 208 416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c54.5 0 104.1-21 141.1-55.2V371c0 3.2 1.3 6.2 3.5 8.5l129 129c4.7 4.7 12.3 4.7 17 0l9.9-9.9c4.7-4.7 4.7-12.3 0-17zM208 384c-97.3 0-176-78.7-176-176S110.7 32 208 32s176 78.7 176 176-78.7 176-176 176z"/></svg>
+        </div>
         <div id="busca-feedback" class="busca-feedback"></div>
         <div class="loading-spinner" id="loading-spinner"></div>
         <div class="grid-produtos" id="grid-produtos"></div>
